# BlocklistMerger

./: .gitignore  README.md  merge_and_classify.py  pyproject.toml  requirements.txt  update.yml
.github/: dependabot.yml
.github/workflows/: heavy-evidence.yml  update.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/04-runtime-scaling-reproducibility/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-HUMAN-UAT.md  (+5 more)
config/: release_canaries.json  sources.txt
constraints/: release-py314.txt
docs/: AGH_SEMANTICS.md  BENCHMARKS.md  PROFILING.md  RELEASE_GUARD_PROMOTION.md  RUNTIME_LANGUAGE_GATE.md  SCOPE.md
scripts/: __init__.py  benchmark_pipeline.py  cleaner.py  compiler.py  downloader.py  fetch_sources.py  pipeline.py  profile_pipeline.py  pruning_proof.py  release_evidence.py  release_validator.py  rule_semantics.py  rule_syntax.py  stage_diagnostics.py
tests/: conftest.py  test_benchmark_pipeline.py  test_ci_workflow.py  test_cleaner.py  test_compiler.py  test_downloader.py  test_helpers.py  test_integration_pipeline.py  test_internal_stage_boundaries.py  test_parser_contract.py  test_performance_sanity.py  test_pipeline.py  test_profile_pipeline.py  test_pruning_proof.py  test_public_docs.py  test_release_evidence.py  test_release_validator.py  test_rule_effects.py  test_rule_semantics.py  test_runtime_evidence.py  test_stage_diagnostics.py
tests/fixtures/: agh_semantics_effects_expected.txt  agh_semantics_effects_input.txt  coverage_proof_pruning_expected.json  coverage_proof_pruning_expected.txt  coverage_proof_pruning_input.txt  modifiers_priority_expected.txt  modifiers_priority_input.txt  semantic_whitelist_scope_expected.txt  semantic_whitelist_scope_input.txt  whitelist_basic_expected.txt  whitelist_basic_input.txt  whitelist_wildcard_expected.txt  whitelist_wildcard_input.txt
