[project]
name = "blocklist-merger"
version = "1.0.0"
description = "AdGuard Home blocklist compiler with intelligent deduplication"
requires-python = ">=3.14"
dependencies = [
    "tldextract>=5.3.0",
    "aiohttp>=3.13.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
blocklist-merge = "scripts.pipeline:main"
