[project]
name = "blocklist-merger"
version = "1.4.0"
description = "AdGuard Home blocklist compiler with intelligent deduplication"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "MissionWAR"}]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MissionWAR/BlocklistMerger"

dependencies = [
    "tldextract>=5.3.0",
    "aiohttp>=3.13.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
blocklist-merge = "scripts.pipeline:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
