[project]
name = "blocklist-merger"
version = "1.5.0"
description = "AdGuard Home blocklist compiler with intelligent deduplication"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "MissionWAR"}]
readme = "README.md"

dependencies = [
    "tldextract>=5.3.1",
    "aiohttp>=3.13.5",
    "aiofiles>=25.1.0",
]

[project.urls]
Homepage = "https://github.com/MissionWAR/BlocklistMerger"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]

[project.scripts]
blocklist-merge = "scripts.pipeline:main"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
